[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dlof"
version = "1.0.0"
description = "مكتبة بايثون كاملة لصيغة DLoF (Document Loop Format) — قراءة، كتابة، تحقق، تجوّل في الحلقة، وحزم .dlofpkg/.dlofSeries/.dlofTemplate"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "DLoF Project" }]
keywords = ["dlof", "xml", "document-loop", "document-format"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Markup :: XML",
]
dependencies = [
    "lxml>=4.9",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
dlof = "dlof.cli:main"

[tool.setuptools.packages.find]
include = ["dlof*"]

[tool.setuptools.package-data]
dlof = ["schema/*.xsd"]
